[package]
name = "punch"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.14", features = ["derive"]}

home = "0.5.3"

rusqlite = {version="0.28.0", features = ["chrono", "bundled"]}
chrono = "0.4.19"
shellexpand = "2.1.0"

